# oh-my-rag-system

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: cd-backend.yml  cd-frontend.yml  cd.yml  ci-backend.yml  ci-frontend.yml  ci.yml
app/: models.py
app/api/: deps.py  main.py
app/chunker/: chunker.py
app/conversation/: manager.py
app/dedup/: dedup.py
app/embedder/: base.py  local_embedder.py  openai_embedder.py
app/eval/: evaluator.py
app/hyde/: hyde.py
app/jobs/: queue.py
app/llm/: anthropic_llm.py  base.py  ollama_llm.py  openai_llm.py  openrouter_llm.py
app/loaders/: base.py  html_loader.py  markdown_loader.py  pdf_loader.py
app/prompt/: builder.py
app/reranker/: base.py  cross_encoder_reranker.py
app/retriever/: retriever.py
app/tracing/: tracer.py
app/vectorstore/: qdrant_store.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.js
frontend/e2e/: document-delete.spec.ts  document-upload.spec.ts  error-states.spec.ts  page-load.spec.ts  query-flow.spec.ts
frontend/src/: App.jsx  index.css
k8s/app/: configmap.yaml  deployment.yaml  secret.example.yaml  service.yaml
k8s/qdrant/: service.yaml  statefulset.yaml
tests/: conftest.py
tests/integration/: test_openrouter.py  test_pipeline.py
tests/unit/: test_chunker.py  test_conversation.py  test_dedup.py  test_embedder.py  test_eval.py  test_hyde.py  test_jobs.py  test_llm.py  test_models.py  test_prompt_builder.py  test_reranker.py  (+3 more)
(+25 files in other folders)
