[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "qdrant-client>=1.9.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "pymupdf>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "testcontainers[qdrant]>=4.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
